Fix title visibility: hide on pages, show on blog posts

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,16 +37,16 @@ svg, .svg-icon, .social-media-list svg, .menu-icon > svg {
 .site-title, .site-title:visited, .page-link { color: #111 !important; text-decoration: none !important; }
 
 
-.post-content .post-title {
+.post-title {
   display: block !important;
 }
 
-.page .post-title, 
-.page-header .post-title {
+.page .post-header .post-title,
+.page-content .post-title:not(.post-list .post-title) {
   display: none !important;
 }
 
-body:not(.post) .post-title {
+body:not(.post) .post-header .post-title {
   display: none !important;
 }
 
